# kaggle

./: .gitignore  README.md  pyproject.toml
Predicting F1 Pit Stops/data/: README.md
Predicting Irrigation Need/: .gitignore  DIARY.md  DOCKER.md  README.md  program.md  run_agent_container.sh
Predicting Irrigation Need/artifacts/: README.md  ideas.md  subset_10pct.csv  train_1pct.csv
Predicting Irrigation Need/artifacts/baseline_catboost/: smoke_domain_v1_seed42.csv  smoke_raw_seed42.csv
Predicting Irrigation Need/artifacts/experiment_runs/: README.md
Predicting Irrigation Need/benchmark/holdout_v1/: README.md  spec.json  splits.csv
Predicting Irrigation Need/data/: sample_submission.csv  test.csv  train.csv
Predicting Irrigation Need/history/: README.md
Predicting Irrigation Need/logs/: README.md
Predicting Irrigation Need/notebooks/: approach_walkthrough.ipynb  exploratory.ipynb
Predicting Irrigation Need/src/: analyze_results.py  baseline_catboost.py  benchmark.py  bootstrap.py  evaluate.py  experiment.py  leaderboard.py  notes.py  profile_data.py  results.py
Predicting Irrigation Need/submissions/: README.md
template/: .gitignore  AGENTS.md  DIARY.md  DOCKER.md  README.md  program.md  run_agent_container.sh
template/artifacts/: README.md
template/data/: README.md
template/history/: README.md
template/logs/: README.md
template/notebooks/: README.md
template/src/: analyze_results.py  evaluate.py  experiment.py  profile_data.py
template/submissions/: README.md
