[project]
name = "kaggle"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "catboost>=1.2.10",
    "ipykernel>=7.2.0",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.9",
    "pandas>=3.0.2",
    "polars>=1.40.1",
    "scikit-learn>=1.8.0",
    "numba>=0.61.0",
    "optuna>=4.8.0",
    "pyarrow>=24.0.0",
    "xgboost>=3.2.0",
]
